Bug 464775: Fix for findbugs warnings
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>